kubernetes/apps/downloads/sonarr/app/httproute.yaml
---
# yaml-language-server: $schema=https://raw.githubusercontent.com/datreeio/CRDs-catalog/main/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: sonarr
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/name: "Sonarr"
    gethomepage.dev/description: "TV series automation"
    gethomepage.dev/group: "Downloads"
    gethomepage.dev/icon: "sonarr"
spec:
  parentRefs:
    - name: envoy-internal
      namespace: network
      sectionName: https
  hostnames:
    - "sonarr.${DOMAIN_CLUSTER}"
  rules:
    - backendRefs:
        - name: sonarr
          port: 80
